kick away helper variable kernel_git

--- a/playbooks/roles/setup_common/defaults/main.yaml
+++ b/playbooks/roles/setup_common/defaults/main.yaml
@@ -11,9 +11,8 @@ desired_debian_release: ""
 kernel_debian_backports: false
 kernel_debian_cloud: false
 
-# build Linux kernel from Git sources
-kernel_git: "{{ kernel_git_repo_url | length > 0 }}"
-kernel_git_build: "{{ kernel_git | ternary('yes', 'no') }}"
+# build Linux kernel from sources
+kernel_git_build: "{{ (kernel_git_repo_url | length > 0) | ternary('yes', 'no') }}"
 kernel_git_repo_url: ""
 kernel_git_version: ""
 kernel_git_patches: []
