--- a/playbooks/roles/setup_common/tasks/ipv6-ionos.yaml
+++ b/playbooks/roles/setup_common/tasks/ipv6-ionos.yaml
@@ -17,7 +17,7 @@
     msg:
       - "expected: {{ _ipv6_new }}"
       - "current:  {{ ansible_facts.default_ipv6.address }}"
-      - "run:      ssh inventory_hostname 'service systemd-networkd restart; sleep 3; ip a'"
+      - "run:      ssh {{ inventory_hostname }} 'service systemd-networkd restart; sleep 3; ip a'"
 
 - name: Ensure Ipv6 address is non-default
   ansible.builtin.assert:
