--- a/playbooks/roles/info_snowflake/tasks/process-runtime.yaml
+++ b/playbooks/roles/info_snowflake/tasks/process-runtime.yaml
@@ -16,4 +16,4 @@
     line: "{{ inventory_hostname }} etimes {{ _result.stdout | default('-') }}"
     path: "{{ tmp_dir }}/{{ item.name }}_process_runtime"
     regexp: "^{{ inventory_hostname }} "
-    state: "{{ (_result.stdout | length > 0) | ternary('present', 'absent') }}"
+    state: "{{ (item.state == 'present' and _result.stdout | length > 0) | ternary('present', 'absent') }}"
