--- a/playbooks/roles/info_snowflake/tasks/connections.yaml
+++ b/playbooks/roles/info_snowflake/tasks/connections.yaml
@@ -31,4 +31,4 @@
     line: "{{ inventory_hostname }} {{ _result.stdout | default('n/a') }}"
     path: "{{ tmp_dir }}/{{ item.name }}_connections"
     regexp: "^{{ inventory_hostname }} "
-    state: "{{ (_result.stderr | length > 0) | ternary('absent', 'present') }}"
+    state: "{{ (item.state == 'present' and _result.stderr | length == 0) | ternary('present', 'absent') }}"
