--- a/playbooks/roles/info_snowflake/tasks/main.yaml
+++ b/playbooks/roles/info_snowflake/tasks/main.yaml
@@ -33,7 +33,7 @@
           ansible.builtin.include_tasks: log-proxy.yaml
           loop_control:
             label: "{{ item.name }}"
-          loop: "{{ snowflake_proxies }}"
+          loop: "{{ snowflake_proxies | selectattr('state', 'match', 'present') }}"
 
     - name: Block
       tags:
