--- a/playbooks/roles/setup_snowflake/handlers/main.yaml
+++ b/playbooks/roles/setup_snowflake/handlers/main.yaml
@@ -12,4 +12,4 @@
     no_block: true
   loop_control:
     label: "{{ item.name }}"
-  loop: "{{ snowflake_proxies | selectattr('state', 'match', 'present') }}"
+  loop: "{{ snowflake_proxies | selectattr('state', 'eq', 'present') }}"
