--- a/playbooks/roles/setup_snowflake/tasks/config.yaml
+++ b/playbooks/roles/setup_snowflake/tasks/config.yaml
@@ -3,7 +3,7 @@
   ansible.posix.sysctl:
     name: user.max_user_namespaces
     # https://gitlab.torproject.org/tpo/anti-censorship/pluggable-transports/snowflake/-/issues/40287
-    value: "{{ snowflake_proxies | selectattr('state', 'match', 'present') | length * 2 }}"
+    value: "{{ snowflake_proxies | selectattr('state', 'eq', 'present') | length * 2 }}"
     sysctl_file: /etc/sysctl.d/21tor-snowflake.conf
     sysctl_set: true
 
