--- a/playbooks/roles/setup_snowflake/tasks/main.yaml
+++ b/playbooks/roles/setup_snowflake/tasks/main.yaml
@@ -43,13 +43,13 @@
           ansible.builtin.include_tasks: _snowflake.yaml
           loop_control:
             label: "{{ item.name }}"
-          loop: "{{ snowflake_proxies | selectattr('state', 'match', 'present') }}"
+          loop: "{{ snowflake_proxies | selectattr('state', 'eq', 'present') }}"
 
         - name: Remove
           ansible.builtin.include_tasks: _snowflake-remove.yaml
           loop_control:
             label: "{{ item.name }}"
-          loop: "{{ snowflake_proxies | selectattr('state', 'match', 'absent') }}"
+          loop: "{{ snowflake_proxies | selectattr('state', 'eq', 'absent') }}"
 
     - name: Configure
       ansible.builtin.import_tasks: config.yaml
