--- a/playbooks/roles/setup_common/tasks/tools-apt.yaml
+++ b/playbooks/roles/setup_common/tasks/tools-apt.yaml
@@ -27,7 +27,7 @@
       - python3-psutil
 
 - name: Ensure no package manager is running
-  failed_when: _processes.pids | length > 0
+  failed_when: _processes.pids | default([]) | length > 0
   retries: 3
   delay: 60
   community.general.pids:
