--- a/playbooks/roles/setup_tor/tasks/config.yaml
+++ b/playbooks/roles/setup_tor/tasks/config.yaml
@@ -1,4 +1,12 @@
 ---
+- name: Set sysctl max user namespaces
+  ansible.posix.sysctl:
+    name: user.max_user_namespaces
+    value: "2" # debian bookworm default: 14886
+    sysctl_file: /etc/sysctl.d/21tor-relay.conf
+    sysctl_set: true
+  notify: Restart Tor
+
 - name: Configure torrc
   ansible.builtin.template:
     src: torrc.j2
