use seed_host and unify ipv6 address assert

--- a/playbooks/roles/setup_common/files/20tor-system.conf
+++ b/playbooks/roles/setup_common/files/20tor-system.conf
@@ -6,7 +6,7 @@ net.ipv4.tcp_syncookies = 1
 net.ipv6.ip_nonlocal_bind = 1
 
 # Hints:
-#   User namespaces are needed for Snowflake systemd restart.
+#   User namespaces are needed.
 #   Modules are needed to boot a distribution kernel.
 #   PTRACE_ATTACH must be 1 for minicoredumper
 #   https://kspp.github.io/Recommended_Settings#sysctls
