--- a/playbooks/roles/setup_common/tasks/ipv6-hetzner.yaml
+++ b/playbooks/roles/setup_common/tasks/ipv6-hetzner.yaml
@@ -15,13 +15,13 @@
   when: ansible_facts.default_ipv6.address != _ipv6_new
   vars:
     _a: "{{ '%x' % (range(0, 65535) |
-      random(seed=seed_address + inventory_hostname + ansible_facts.default_ipv4.address + 'A' + _ipv6_prefix)) }}"
+      random(seed=seed_address + seed_host + 'A' + _ipv6_prefix)) }}"
     _b: "{{ '%x' % (range(0, 65535) |
-      random(seed=seed_address + inventory_hostname + ansible_facts.default_ipv4.address + 'B' + _ipv6_prefix)) }}"
+      random(seed=seed_address + seed_host + 'B' + _ipv6_prefix)) }}"
     _c: "{{ '%x' % (range(0, 65535) |
-      random(seed=seed_address + inventory_hostname + ansible_facts.default_ipv4.address + 'C' + _ipv6_prefix)) }}"
+      random(seed=seed_address + seed_host + 'C' + _ipv6_prefix)) }}"
     _d: "{{ '%x' % (range(0, 65535) |
-      random(seed=seed_address + inventory_hostname + ansible_facts.default_ipv4.address + 'D' + _ipv6_prefix)) }}"
+      random(seed=seed_address + seed_host + 'D' + _ipv6_prefix)) }}"
     _ipv6_prefix: "{{ (ansible_facts.default_ipv6.address | split(':'))[:4] | join(':') }}"
     _ipv6_new: "{{ _ipv6_prefix }}:{{ _a }}:{{ _b }}:{{ _c }}:{{ _d }}"
   block:
@@ -71,9 +71,3 @@
       ansible.builtin.setup:
         gather_subset:
           - default_ipv6
-
-- name: Ensure Ipv6 address is non-default
-  ansible.builtin.assert:
-    quiet: true
-    that:
-      - "ansible_facts.default_ipv6.address is not search('::1$')"
