keep artefacts in an own subdir

--- a/playbooks/roles/info_healthy/tasks/_artefact.yaml
+++ b/playbooks/roles/info_healthy/tasks/_artefact.yaml
@@ -10,7 +10,7 @@
 - name: Work on new artefact
   when: _known.changed
   vars:
-    _tmp_filename: "{{ tmp_dir }}/{{ item.checksum }}"
+    _tmp_filename: "{{ tmp_dir }}/artefact/{{ item.checksum }}"
   block:
     - name: Log artefact history
       delegate_to: localhost
