--- a/playbooks/roles/setup_common/vars/main.yaml
+++ b/playbooks/roles/setup_common/vars/main.yaml
@@ -1,5 +1,13 @@
 ---
-# hint: set_fact works for tasks but handlers do not know those values
+snowflake_metrics: "{{ snowflake_proxies |
+  selectattr('state', 'eq', 'present') |
+  selectattr('proxy_metrics_port', 'defined') |
+  selectattr('proxy_metrics_port', 'gt', 0) |
+  length > 0 }}"
+
+# set_fact or vars: works for tasks/blocks but handlers do not know those values, therefore define them here
+
+# Firewall Tor :
 
 # open additional ports
 additional_ports_v4: >-
@@ -16,20 +24,17 @@ add_local_services_v6: >-
 
 # remote Prometheus server
 add_remote_services_v4: >-
-  {{ (metrics_port and prometheus_server) |
+  {{ (metrics_port > 0 and prometheus_server != '') |
     ternary('ADD_REMOTE_SERVICES="' + prometheus_server + '>' + metrics_port | string + '"', '') }}
 
 add_remote_services_v6: >-
-  {{ (metrics_port and prometheus_server6) |
+  {{ (metrics_port > 0 and prometheus_server6 != '' ) |
     ternary('ADD_REMOTE_SERVICES6="[' + prometheus_server6 + ']>' + metrics_port | string + '"', '') }}
 
 configured_relays_v4: >-
-  {{ bridge_distribution |
+  {{ (tor_bridge_distribution == '') |
     ternary('CONFIGURED_RELAYS="' + ansible_facts.default_ipv4.address + ':' + tor_port | string + '"', '') }}
 
 configured_relays_v6: >-
-  {{ bridge_distribution |
+  {{ (tor_bridge_distribution == '') |
     ternary('CONFIGURED_RELAYS6="[' + ansible_facts.default_ipv6.address + ']:' + tor_port | string + '"', '') }}
-
-# linux user
-tor_user: "{{ tor_build_from_source | ternary('tor', 'debian-tor') }}"
