--- a/playbooks/roles/setup_common/tasks/targets.yaml
+++ b/playbooks/roles/setup_common/tasks/targets.yaml
@@ -5,7 +5,7 @@
       create: true
       firstmatch: true
       mode: "0644"
-      line: '- targets: ["{{ inventory_hostname }}:{{ metrics_port | default(0) }}"]'
+      line: '- targets: ["{{ inventory_hostname }}:{{ metrics_port }}"]'
       regexp: '^- targets: \["{{ inventory_hostname }}:'
   block:
     - name: DDoS targets
@@ -13,32 +13,31 @@
       throttle: 1
       ansible.builtin.lineinfile:
         path: "{{ tmp_dir }}/targets_tor-ddos.yaml"
-        state: "{{ (ddos_metrics | default(false)) | ternary('present', 'absent') }}"
+        state: "{{ ddos_metrics | ternary('present', 'absent') }}"
 
     - name: Node targets
       delegate_to: localhost
       throttle: 1
       ansible.builtin.lineinfile:
         path: "{{ tmp_dir }}/targets_node.yaml"
-        state: "{{ (node_metrics | default(false)) | ternary('present', 'absent') }}"
+        state: "{{ node_metrics | ternary('present', 'absent') }}"
 
     - name: Snowflake targets
       delegate_to: localhost
       throttle: 1
       ansible.builtin.lineinfile:
         path: "{{ tmp_dir }}/targets_{{ item.name }}.yaml"
-        state: "{{ (item.state == 'present' and snowflake_metrics | default(false)) | ternary('present', 'absent') }}"
+        state: "{{ item.state }}"
       loop_control:
         label: "{{ item.name }}"
-      loop: "{{ snowflake_proxies | default([]) }}"
+      loop: "{{ snowflake_proxies }}"
 
     - name: Tor bridge targets
       delegate_to: localhost
       throttle: 1
       ansible.builtin.lineinfile:
         path: "{{ tmp_dir }}/targets_tor-bridge.yaml"
-        state:
-          "{{ (tor_metrics is defined | default(false) and bridge_distribution | default(false)) |
+        state: "{{ (tor_metrics and tor_bridge_distribution != '') |
           ternary('present', 'absent') }}"
 
     - name: Tor server targets
@@ -46,6 +45,5 @@
       throttle: 1
       ansible.builtin.lineinfile:
         path: "{{ tmp_dir }}/targets_tor-server.yaml"
-        state:
-          "{{ (tor_metrics | default(false) and (bridge_distribution is undefined or not bridge_distribution)) |
+        state: "{{ (tor_metrics and tor_bridge_distribution == '') |
           ternary('present', 'absent') }}"
