--- a/playbooks/roles/setup_tor/tasks/tor-src.yaml
+++ b/playbooks/roles/setup_tor/tasks/tor-src.yaml
@@ -1,8 +1,12 @@
 ---
+- name: Add the group tor
+  ansible.builtin.group:
+    name: tor
+
 - name: Add the user
   ansible.builtin.user:
-    name: tor
     group: tor
+    name: tor
 
 - name: Work on "{{ _repo_dir }}"
   vars:
@@ -74,7 +78,7 @@
 # for bridges the PT needs the capability
 - name: Allow low port
   changed_when: false
-  when: tor_port | int < 1024 and bridge_distribution | length == 0
+  when: tor_port < 1024 and tor_bridge_distribution == ''
   community.general.capabilities:
     path: /usr/bin/tor
     capability: cap_net_bind_service+ep
